# OpenGLLearning

./: CMakeLists.txt  ballo2.mtl  main.cpp  sudoCode
3dModelsAndTextures/: explosion.mtl
OpenGLClasses/: Camera.cpp  Camera.hpp  ElementBuffer.cpp  ElementBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  openGLErrorManagementFunctions.cpp  openGLFunctionCallErrorManagementWrapper.hpp
OpenGLClasses/AssimpInterperater/: AssimpInterperater.cpp  AssimpInterperater.hpp
OpenGLClasses/BufferLayout/: LayoutElement.cpp  LayoutElement.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
OpenGLClasses/ModelManagement/: Texture.cpp  Texture.hpp
OpenGLClasses/ModelManagement/Animation/: Animation.cpp  Animation.hpp  KeyFrame.cpp  KeyFrame.hpp
OpenGLClasses/ModelManagement/AssimpInterperater/: AssimpInterperater.cpp  AssimpInterperater.hpp  AssimpInterpreter.cpp  AssimpInterpreter.hpp
OpenGLClasses/ModelManagement/Models/: Model.cpp  Model.hpp  ModelDispenser.cpp  ModelDispenser.hpp  ModelMesh.cpp  ModelMesh.hpp  Transformation.cpp  Transformation.hpp
OpenGLClasses/Models/: Model.cpp  Model.hpp
OpenGLClasses/ObserverPattern/: Observable.cpp  Observable.hpp  i_Observer.hpp
OpenglGraphicsLib/: CMakeLists.txt
OpenglGraphicsLib/ExceptionClass/: GenericProgException.cpp
OpenglGraphicsLib/Includes/: Animation.hpp  AssimpInterpreter.hpp  Camera.hpp  GenericProgException.hpp  KeyFrame.hpp  Model.hpp  ModelDispenser.hpp  ModelMesh.hpp  Observable.hpp  Renderer.hpp  Shader.hpp  TextDisplaySystem.hpp  Texture.hpp  Transformation.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp  s_CharacterGlyph.hpp  s_VertexData.hpp
OpenglGraphicsLib/Lights/: Light.cpp  Light.hpp
OpenglGraphicsLib/OpenGLClasses/: Camera.cpp  ElementBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
OpenglGraphicsLib/OpenGLClasses/BufferLayout/: LayoutElement.cpp  VertexBufferLayout.cpp
OpenglGraphicsLib/OpenGLClasses/ModelManagement/: Texture.cpp
OpenglGraphicsLib/OpenGLClasses/ModelManagement/Animation/: Animation.cpp  KeyFrame.cpp
OpenglGraphicsLib/OpenGLClasses/ModelManagement/AssimpInterperater/: AssimpInterpreter.cpp
OpenglGraphicsLib/OpenGLClasses/ModelManagement/Models/: Model.cpp  ModelDispenser.cpp  ModelMesh.cpp  Transformation.cpp
OpenglGraphicsLib/OpenGLClasses/ObserverPattern/: Observable.cpp
OpenglGraphicsLib/OpenGLClasses/TextDisplaySystem/: GlyphTexture.cpp  GlyphTexture.hpp  TextDisplaySystem.cpp  TextDisplaySystem.hpp  TextModel.cpp  TextModel.hpp  freeTypeErrorWrapper.hpp
